--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
   </head>
 
   <body>
-    <p class="love_you">L Y</p>
+    <p class="love_you">林颖</p>
+    <audio src="a.mp3" autoplay="autoplay" loop="loop" controls="controls"></audio>
     <canvas id="lovexf"></canvas>
     <script>
       var settings = {
